my_results_gate_added
