# api-gateway/internal/routes/ielts_routes.go
@@ -33,6 +33,9 @@ func IELTSRoutes(r *gin.RouterGroup, authClient *client.AuthClient) {
 			result.GET("/:page/:size", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.GetExamResult)
 			result.GET("/user-answers/:examId", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.GetExamUserAnswers)
 			result.GET("/top-exam-result/:dataframe", handlers.GetTopExamResult)
+			result.GET("/get-results-inline/:sectionType/:examId", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.GetResultsInlineBySection)
+			result.GET("/get-results-outline-writing/:examId", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.GetResultsOutlineWriting)
+			result.GET("/get-results-outline-speaking/:examId", middleware.AuthMiddleware([]string{"USER"}, authClient), handlers.GetResultsOutlineSpeaking)
 		}
 		attempt := exam.Group("/attempt")
 		{
